# regex-rustgo

./: .gitignore  Cargo.toml  Makefile  README.md  main.go
regex-rustgo/: concurrent.go  regex.go  regexpool.go  rustgo.go  rustgo.s  singlethreaded.go  stack_unix.go
regex-rustgo/internal/stack/: stack_unix.go
regex-rustgo/stackprovider/: pooled.go  provider.go  static.go
src/: lib.rs
